<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Nota">


    <TextView
        android:id="@+id/tvNotas"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/msn_nota"
        android:textStyle="bold"
        android:textSize="24sp"
        android:textColor="@color/violet"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_margin="10dp"
        android:gravity="center"
        android:layout_marginHorizontal="30dp"

        />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tilStudent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/student_name"
        android:layout_marginHorizontal="25dp"
        android:layout_marginTop="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvNotas"
        android:layout_marginVertical="10dp"
        >

        <EditText
            android:id="@+id/tieStudent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tilGrade1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/nota_1"
        android:layout_marginHorizontal="25dp"
        android:layout_marginTop="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tilStudent"
        android:layout_marginVertical="10dp"
        >

        <EditText
            android:id="@+id/tieGrade1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tilGrade2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/nota_2"
        android:layout_marginHorizontal="25dp"
        android:layout_marginTop="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tilGrade1"
        android:layout_marginVertical="10dp"
        >

        <EditText
            android:id="@+id/tieGrade2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tilGrade3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/nota_3"
        android:layout_marginHorizontal="25dp"
        android:layout_marginTop="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tilGrade2"
        android:layout_marginVertical="10dp"
        >

        <EditText
            android:id="@+id/tieGrade3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number" />

    </com.google.android.material.textfield.TextInputLayout>


    <Button
        android:id="@+id/btnCalculate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/calcular_nota_final"
        app:layout_constraintTop_toBottomOf="@id/tilGrade3"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="20dp"


        />


    <TextView
        android:id="@+id/tvNotaFinal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="24sp"
        android:text="@string/_0"
        android:textStyle="bold"
        android:textColor="@color/violet"
        app:layout_constraintTop_toBottomOf="@id/btnCalculate"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="20dp"
        android:gravity="center"

        />
</androidx.constraintlayout.widget.ConstraintLayout>