<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Menu">

    <TextView
        android:id="@+id/tvMenu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/menu_principal"
        android:textStyle="bold"
        android:textSize="24sp"
        android:textColor="@color/violet"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_margin="10dp"
        android:gravity="center"
        android:layout_marginHorizontal="30dp"

        />

    <Button

        android:id="@+id/btnEvaluate"
        android:text="@string/msn_btn_evaluate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/tvMenu"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginHorizontal="30dp"
        android:layout_marginTop="20dp"

        />

    <Button

        android:id="@+id/btnGoGrade"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/msn_btn_go_grade"
        app:layout_constraintTop_toBottomOf="@id/btnEvaluate"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginHorizontal="30dp"
        android:layout_marginTop="20dp"

        />


</androidx.constraintlayout.widget.ConstraintLayout>